--- a/client/pom.xml
+++ b/client/pom.xml
@@ -17,6 +17,12 @@
             <artifactId>javafx-controls</artifactId>
             <version>21</version>
         </dependency>
+        <dependency>
+            <groupId>ru.avdonin</groupId>
+            <artifactId>template</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <properties>
