--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: testWebSocket
 
   datasource:
-    url: jdbc:postgresql://localhost:6432/testWebSocket
+    url: jdbc:postgresql://localhost:6432/application_chat
     username: user
     password: password
     driverClassName: org.postgresql.Driver
@@ -15,3 +15,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+
+ # sql:
+ #   init:
+ #     mode: always
