--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,19 @@ services:
       timeout: 5s
       interval: 5s
       retries: 10
+
+  ftp_server:
+    image: fauria/vsftpd
+    container_name: ftp_server
+    restart: unless-stopped
+    environment:
+      - FTP_USER=user
+      - FTP_PASS=password
+      - PASV_ADDRESS=localhost
+      - PASV_MIN_PORT=30000
+      - PASV_MAX_PORT=30009
+    ports:
+      - "21:21"
+      - "30000-30009:30000-30009"
+    volumes:
+      - ./ftp_data:/home/ftpuser
