--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8080
 
 encryption:
-  key: this-is-a-32-character-long-key!
+  key: 18'XY5W^:@LhW^V8NiEUftJ@+jd|LWOS
   algorithm: AES
   transformation: AES/CBC/PKCS5Padding
 
