add buttons + and - from request friends

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -21,9 +21,9 @@ spring:
       ddl-auto: update
     show-sql: true
 
-  sql:
-    init:
-      mode: always
+#  sql:
+#    init:
+#      mode: always
 
 ftp:
   host: localhost
