--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -2,3 +2,7 @@ encryption:
   key: 18'XY5W^:@LhW^V8NiEUftJ@+jd|LWOS
   algorithm: AES
   transformation: AES/CBC/PKCS5Padding
+
+connection:
+  http-uri: http://localhost:8080
+  ws-uri: ws://localhost:8080
