--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -6,3 +6,7 @@ encryption:
 connection:
   http-uri: http://localhost:8080
   ws-uri: ws://localhost:8080
+
+app:
+  language: RU
+  time_zone: SYSTEM
