Добавлен ftp сервер для сохранения аватарок пользователей

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -28,6 +28,6 @@ spring:
 ftp:
   host: localhost
   port: 21
-  username: user
-  password: password
-  remote-directory: /icons
+  username: ftpuser
+  password: ftppass
+  passive-mode: true
